# nomad39

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  desktop.ini  nomad.3.9.1.lnk
VisualStudio/: basic_lib_single_obj.sln  basic_lib_single_obj.vcxproj  nomad.MPI.sln  nomad.MPI.vcxproj  nomad.sln  nomad.vcxproj  nomad_lib.MPI.vcxproj  nomad_lib.vcxproj  psdmads.sln  psdmads.vcxproj  sgtelib.vcxproj
src/: CMakeLists.txt  Double.hpp  Evaluator.hpp  Evaluator_Control.cpp  Mads.cpp  Signature.hpp
